[tool.poetry]
name = "quess-the-number"
version = "0.1.0"
description = ""
authors = ["nikitakozlovjr <nikita3726898@gmail.com>"]
readme = "README.md"

[tool.poetry]
packages = [
  { include = "quess_the_number" },
]

[tool.poetry.dependencies]
python = "3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
